# k8s-examples

traitement/: pyproject.toml
traitement/servers/: traitementA.py
